# gray-codes

./: CMakeLists.txt  build.sh  list_jobs.sh  module_load.sh  task.slurm
include/: gray_codes.hpp  gray_codes.ipp  main.hpp
src/: gray_codes.cpp  main.cpp
